# ros2_patrol_robot

./: .gitignore  AGENTS.md  README.md
docs/: 02.ROBOT_GATEWAY_ARCHITECTURE.md  04.FAULT_MANAGEMENT_RECOVERY_ARCHITECTURE.md  05.INDUSTRIAL_COMPOSITE_TASK_ARCHITECTURE.md  06.LEADERSHIP_10MIN_BRIEF.md  MANUAL.md  ROBOT_GATEWAY_ARCHITECTURE.md  TASK_DSL_ARCHITECTURE.md  TASK_SKILL_ARCHITECTURE.md
docs/mqtt_demo/: README.md  cancel.json  pause.json  resume.json  start_inspection_A.json  start_legacy_patrol.json
my_robot_description/launch/: gazebo_sim.launch.py
my_robot_description/urdf/plugins/: robbot_ros2_control.xacro
patrol_interfaces/: CMakeLists.txt  package.xml
patrol_interfaces/msg/: CompositeTaskReport.msg  FaultEvent.msg  RobotStatus.msg  TaskReport.msg
patrol_interfaces/srv/: CaptureImage.srv  ControlPatrol.srv  SubmitPatrolTask.srv
patrol_robot/: package.xml  setup.py
patrol_robot/config/: capture_config.yaml  gateway_config.yaml  patrol_config.yaml  stations.yaml
patrol_robot/config/tasks/: industrial_screw_inspection.yaml  inspection_route_A.yaml  legacy_room_patrol.yaml
patrol_robot/launch/: patrol_launch.py
patrol_robot/patrol_robot/: capture_image_node.py  patrol_node.py  robot_gateway_node.py  task_manager.py
patrol_robot/patrol_robot/adapters/: __init__.py  arm_adapter.py  mock_arm_adapter.py  mock_tool_adapter.py  tool_adapter.py
patrol_robot/patrol_robot/faults/: fault_event.py  (+3 more)
patrol_robot/test/: test_fault_recovery.py
robot_navigation2/config/: nav2_params.yaml
robot_navigation2/launch/: navigation2.launch.py
(+21 files in other folders)
